--- a/EverythingSettings.xaml
+++ b/EverythingSettings.xaml
@@ -5,11 +5,12 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
              Loaded="View_Loaded"
-             d:DesignHeight="300" d:DesignWidth="300">
+             d:DesignHeight="300" d:DesignWidth="426.4">
     <Grid Margin="7,50" VerticalAlignment="Top" >
         <Grid.RowDefinitions>
             <RowDefinition/>
             <RowDefinition/>
+            <RowDefinition Height="30"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition />
@@ -24,5 +25,17 @@
         <Label Grid.Row="1" Grid.Column="1" x:Name="EditorPath" Margin="10" HorizontalAlignment="Left" />
         <Button Grid.Row="1" Grid.Column="2" x:Name="OpenEditorPath" Content="..." Margin="10" 
                 HorizontalAlignment="Left" Click="EditorPath_Clicked"/>
+        <TextBlock Grid.Row="3" Text="Customized Explorer" Margin="10,0,0,0"  VerticalAlignment="Center"
+                   ToolTip="You can customized the exploere for opening the container folder 
+ by inputing the Environmental Variable or the Absolute Path of the exploere you want to use.
+ It will be useful to use CMD to test whether the it is avaliable."/>
+        <TextBox  Grid.Row="3" Grid.Column="1" TextWrapping="NoWrap" VerticalAlignment="Center" Width="150" Height="30"
+                 TextChanged="CustomizeExplorer" x:Name="CustomizeExplorerBox"/>
+        <TextBlock  Grid.Row="3" Grid.Column="2" Text="Args" VerticalAlignment="Center" Margin="5"
+                       ToolTip="Enter the customized args you want to add for customized exploere. %f represent file path. %s represent parent path."></TextBlock>
+        <TextBox  Grid.Row="3" Grid.Column="2" HorizontalAlignment="Right"
+                  ToolTip="%f represent file path. %s represent parent path."
+                  Margin="0,0,5,0" Width="50" Height="30" x:Name="CustomizeArgsBox" TextChanged="CustomizeExplorerArgs"></TextBox>
+
     </Grid>
 </UserControl>
