--- a/EverythingSettings.xaml
+++ b/EverythingSettings.xaml
@@ -25,18 +25,14 @@
         <Label Grid.Row="1" Grid.Column="1" x:Name="EditorPath" Margin="10" HorizontalAlignment="Left" />
         <Button Grid.Row="1" Grid.Column="2" x:Name="OpenEditorPath" Content="..." Margin="10" 
                 HorizontalAlignment="Left" Click="EditorPath_Clicked"/>
-        <TextBlock Grid.Row="3" Text="Customized Explorer" Margin="10,0,0,0"  VerticalAlignment="Center"
-                   ToolTip="You can customized the exploere for opening the container folder 
- by inputing the Environmental Variable or the Absolute Path of the exploere you want to use.
- It will be useful to use CMD to test whether the it is avaliable."/>
+        <TextBlock Grid.Row="3" Text="{DynamicResource flowlauncher_plugin_everything_customized_title}" Margin="10,0,0,0"  VerticalAlignment="Center"
+                   ToolTip="{DynamicResource flowlauncher_plugin_everything_customized_tooltip}"/>
         <TextBox  Grid.Row="3" Grid.Column="1" TextWrapping="NoWrap" VerticalAlignment="Center" Width="150" Height="30"
                  TextChanged="CustomizeExplorer" x:Name="CustomizeExplorerBox"/>
-        <TextBlock  Grid.Row="3" Grid.Column="2" Text="Args" VerticalAlignment="Center" Margin="5"
-                       ToolTip="Enter the customized args you want to add for customized exploere. %s represent directory path (parent directory for file or directory itself).
-%f represent file path (only work for file)."></TextBlock>
+        <TextBlock  Grid.Row="3" Grid.Column="2" Text="{DynamicResource flowlauncher_plugin_everything_customized_args}" VerticalAlignment="Center" Margin="5"
+                       ToolTip="{DynamicResource flowlauncher_plugin_everything_customized_args_tooltip}"></TextBlock>
         <TextBox  Grid.Row="3" Grid.Column="2" HorizontalAlignment="Right"
-                  ToolTip="%s represent directory path (parent directory for file or directory itself). %f represent file path (only work for file)."
+                  ToolTip="{DynamicResource flowlauncher_plugin_everything_customized_args_textbox}"
                   Margin="0,0,5,0" Width="50" Height="30" x:Name="CustomizeArgsBox" TextChanged="CustomizeExplorerArgs"></TextBox>
-
     </Grid>
 </UserControl>
