--- a/Languages/de.xaml
+++ b/Languages/de.xaml
@@ -14,5 +14,6 @@
     <system:String x:Key="flowlauncher_plugin_everything_plugin_description">Suche Dateien mit Everything</system:String>
 
     <system:String x:Key="flowlauncher_plugin_everything_use_location_as_working_dir">Verwenden Suchergebnis Standort als ausführbare Arbeitsverzeichnis</system:String>
+    <system:String x:Key="flowlauncher_plugin_everything_launch_hidden">Starten Sie versteckt</system:String>
 
 </ResourceDictionary>
