--- a/Languages/tr.xaml
+++ b/Languages/tr.xaml
@@ -18,5 +18,5 @@
     <system:String x:Key="flowlauncher_plugin_everything_plugin_description">Everything programı yardımıyla diskteki dosyalarınızı arayın.</system:String>
 
     <system:String x:Key="flowlauncher_plugin_everything_use_location_as_working_dir">Programın çalışma klasörü olarak sonuç klasörünü kullan</system:String>
-
+    <system:String x:Key="flowlauncher_plugin_everything_launch_hidden">Fırlatma gizli</system:String>
 </ResourceDictionary>
