--- a/Languages/zh-cn.xaml
+++ b/Languages/zh-cn.xaml
@@ -18,4 +18,5 @@
     <system:String x:Key="flowlauncher_plugin_everything_plugin_description">利用 Everything 搜索磁盘文件</system:String>
 
     <system:String x:Key="flowlauncher_plugin_everything_use_location_as_working_dir">使用应用程序的位置为可执行的工作目录</system:String>
+    <system:String x:Key="flowlauncher_plugin_everything_launch_hidden">启动隐藏</system:String>
 </ResourceDictionary>
