--- a/Languages/pl.xaml
+++ b/Languages/pl.xaml
@@ -12,5 +12,5 @@
     
     <system:String x:Key="flowlauncher_plugin_everything_plugin_name">Everything</system:String>
     <system:String x:Key="flowlauncher_plugin_everything_plugin_description">Szukaj w plikach na dysku używając programu Everything</system:String>
-
+    <system:String x:Key="flowlauncher_plugin_everything_launch_hidden">Uruchomienie ukryty</system:String>    
 </ResourceDictionary>
