--- a/Languages/zh-tw.xaml
+++ b/Languages/zh-tw.xaml
@@ -14,4 +14,5 @@
     <system:String x:Key="flowlauncher_plugin_everything_plugin_description">利用 Everything 搜尋磁碟上的檔案</system:String>
 
     <system:String x:Key="flowlauncher_plugin_everything_use_location_as_working_dir">使用程式所在目錄作為工作目錄</system:String>
+    <system:String x:Key="flowlauncher_plugin_everything_launch_hidden">啟動隱藏</system:String>
 </ResourceDictionary>
