--- a/Languages/sk.xaml
+++ b/Languages/sk.xaml
@@ -2,7 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:system="clr-namespace:System;assembly=mscorlib">
 
-    <system:String x:Key="flowlauncher_plugin_everything_is_not_running">Everything nie je spustený</system:String>
+    <system:String x:Key="flowlauncher_plugin_everything_is_not_running">Služba Everything nie je spustená</system:String>
     <system:String x:Key="flowlauncher_plugin_everything_query_error">Chyba pri dopytovaní Everything</system:String>
     <system:String x:Key="flowlauncher_plugin_everything_copied">Skopírované</system:String>
     <system:String x:Key="flowlauncher_plugin_everything_canot_start">{0} sa nedá spustiť</system:String>
@@ -18,11 +18,19 @@
     <system:String x:Key="flowlauncher_plugin_everything_plugin_description">Vyhľadávanie súborov cez Everything</system:String>
 
     <system:String x:Key="flowlauncher_plugin_everything_use_location_as_working_dir">Použiť cestu výsledku vyhľadávania ako pracovný priečinok spustiteľného súboru</system:String>
-    <system:String x:Key="flowlauncher_plugin_everything_launch_hidden">Launch skrytý</system:String>
+    <system:String x:Key="flowlauncher_plugin_everything_launch_hidden">Spustiť skryté</system:String>
+    
     
     <system:String x:Key="flowlauncher_plugin_everything_customized_tooltip">Na otváranie priečinka súborov môžete použiť vlastného správcu súborov vložením premennej prostredia, alebo absolútnej cesty k správcovi, ktorý chcete použiť. Na otestovanie môžete použiť príkazový riadok.</system:String>
     <system:String x:Key="flowlauncher_plugin_everything_customized_title">Vlastný správca súborov</system:String>
     <system:String x:Key="flowlauncher_plugin_everything_customized_args">Arg.</system:String>
     <system:String x:Key="flowlauncher_plugin_everything_customized_args_tooltip">Zadajte vlastné argumenty, ktoré chcete pridať do vlastného správcu súborov. %s predstavuje cestu k priečinku (rodičovský priečinok pre súbor alebo samotný priečinok). %f predstavuje cestu k súboru (funguje len pre súbor).</system:String>
     <system:String x:Key="flowlauncher_plugin_everything_customized_args_textbox">%s predstavuje cestu k priečinku (rodičovský priečinok pre súbor alebo samotný priečinok). %f predstavuje cestu k súboru (funguje len pre súbor).</system:String>
+    
+    <system:String x:Key="flowlauncher_plugin_everything_installing_title">Inštalácia Everything</system:String>
+    <system:String x:Key="flowlauncher_plugin_everything_installing_subtitle">Inštaluje sa služba Everything. Čakajte, prosím…</system:String>
+    <system:String x:Key="flowlauncher_plugin_everything_installationsuccess_subtitle">Služba Everything bola úspešne nainštalovaná</system:String>
+    <system:String x:Key="flowlauncher_plugin_everything_installationfailed_subtitle">Automatická inštalácia služby Everything zlyhala. Prosím, naintašalujte ju manuálne z https://www.voidtools.com/Everything-1.3.4.686.x64-Setup.exe</system:String>
+    <system:String x:Key="flowlauncher_plugin_everything_run_service">Kliknutím sem ju spustíte</system:String>
+    <system:String x:Key="flowlauncher_plugin_everything_installing_select">Nepodarilo sa nájsť inštaláciu Everything, chcete manuálne vybrať jej umiestnenie?{0}{0}Kliknutím na nie sa Everything automaticky nainštaluje</system:String>
 </ResourceDictionary>
