--- a/EverythingSettings.xaml
+++ b/EverythingSettings.xaml
@@ -11,7 +11,8 @@
             <RowDefinition/>
             <RowDefinition/>
             <RowDefinition/>
-            <RowDefinition Height="35"/>
+            <RowDefinition/>
+            <RowDefinition/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition />
@@ -38,5 +39,9 @@
         <TextBox  Grid.Row="3" Grid.Column="2" HorizontalAlignment="Right"
                   ToolTip="{DynamicResource flowlauncher_plugin_everything_customized_args_textbox}"
                   Margin="0,0,5,0" Width="80" Height="35" x:Name="CustomizeArgsBox" TextChanged="CustomizeExplorerArgs"></TextBox>
+        <Label Grid.Row="4" Grid.Column="1"
+               Content="Result Sort By"></Label>
+        <ComboBox Grid.Row="4" Grid.Column="2" ItemsSource="Binding SortOption"
+                  SelectedValue="Binding Settings.SortOption"></ComboBox>
     </Grid>
 </UserControl>
