--- a/EverythingSettings.xaml
+++ b/EverythingSettings.xaml
@@ -5,13 +5,15 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
              Loaded="View_Loaded"
+             DataContext="{Binding RelativeSource={RelativeSource Self}}"
              d:DesignHeight="300" d:DesignWidth="426.4">
     <Grid Margin="7,50" VerticalAlignment="Top" >
         <Grid.RowDefinitions>
             <RowDefinition/>
             <RowDefinition/>
             <RowDefinition/>
-            <RowDefinition Height="35"/>
+            <RowDefinition Height="50"/>
+            <RowDefinition Height="50"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition />
@@ -31,12 +33,21 @@
                 HorizontalAlignment="Left" Click="EditorPath_Clicked"/>
         <TextBlock Grid.Row="3" Text="{DynamicResource flowlauncher_plugin_everything_customized_title}" Margin="10,0,0,0"  VerticalAlignment="Center"
                    ToolTip="{DynamicResource flowlauncher_plugin_everything_customized_tooltip}"/>
-        <TextBox  Grid.Row="3" Grid.Column="1" TextWrapping="NoWrap" VerticalAlignment="Center" Width="150" Height="35"
-                 TextChanged="CustomizeExplorer" x:Name="CustomizeExplorerBox"/>
+        <TextBox  Grid.Row="3"
+                  Grid.Column="1"
+                  TextWrapping="NoWrap" 
+                  VerticalAlignment="Center" 
+                  HorizontalAlignment="Left"
+                  Width="150" 
+                  Height="35"
+                  Margin="0,5,0,0"
+                  TextChanged="CustomizeExplorer" x:Name="CustomizeExplorerBox"/>
         <TextBlock  Grid.Row="3" Grid.Column="2" Text="{DynamicResource flowlauncher_plugin_everything_customized_args}" VerticalAlignment="Center" Margin="5"
                        ToolTip="{DynamicResource flowlauncher_plugin_everything_customized_args_tooltip}"></TextBlock>
         <TextBox  Grid.Row="3" Grid.Column="2" HorizontalAlignment="Right"
                   ToolTip="{DynamicResource flowlauncher_plugin_everything_customized_args_textbox}"
                   Margin="0,0,5,0" Width="80" Height="35" x:Name="CustomizeArgsBox" TextChanged="CustomizeExplorerArgs"></TextBox>
+        <TextBlock Margin="10" Text="{Binding SortText}" Grid.Row="4"/>
+        <ComboBox Grid.Row="4" Grid.Column="1" Width="200" SelectedItem="{Binding _settings.SortOption}" ItemsSource="{Binding _settings.SortOptions, Mode=OneWay}"/>
     </Grid>
 </UserControl>
