--- a/Languages/sk.xaml
+++ b/Languages/sk.xaml
@@ -26,6 +26,23 @@
     <system:String x:Key="flowlauncher_plugin_everything_customized_args">Arg.</system:String>
     <system:String x:Key="flowlauncher_plugin_everything_customized_args_tooltip">Zadajte vlastné argumenty, ktoré chcete pridať do vlastného správcu súborov. %s predstavuje cestu k priečinku (rodičovský priečinok pre súbor alebo samotný priečinok). %f predstavuje cestu k súboru (funguje len pre súbor).</system:String>
     <system:String x:Key="flowlauncher_plugin_everything_customized_args_textbox">%s predstavuje cestu k priečinku (rodičovský priečinok pre súbor alebo samotný priečinok). %f predstavuje cestu k súboru (funguje len pre súbor).</system:String>
+
+    <system:String x:Key="flowlauncher_plugin_everything_sort_by">Zoradiť podľa</system:String>
+    <system:String x:Key="flowlauncher_plugin_everything_sort_by_name">Názov</system:String>
+    <system:String x:Key="flowlauncher_plugin_everything_sort_by_path">Cesta</system:String>
+    <system:String x:Key="flowlauncher_plugin_everything_sort_by_size">Veľkosť</system:String>
+    <system:String x:Key="flowlauncher_plugin_everything_sort_by_extension">Prípona</system:String>
+    <system:String x:Key="flowlauncher_plugin_everything_sort_by_type_name">Typ</system:String>
+    <system:String x:Key="flowlauncher_plugin_everything_sort_by_date_created">Dátum vytvorenia</system:String>
+    <system:String x:Key="flowlauncher_plugin_everything_sort_by_date_modified">Dátum pravy</system:String>
+    <system:String x:Key="flowlauncher_plugin_everything_sort_by_attributes">Atribúty</system:String>
+    <system:String x:Key="flowlauncher_plugin_everything_sort_by_file_list_filename">Zoznam názvov súborov</system:String>
+    <system:String x:Key="flowlauncher_plugin_everything_sort_by_run_count">Počet spustení</system:String>
+    <system:String x:Key="flowlauncher_plugin_everything_sort_by_date_recently_changed">Nedávo zmenený dátum</system:String>
+    <system:String x:Key="flowlauncher_plugin_everything_sort_by_date_accessed">Dátum prístupu</system:String>
+    <system:String x:Key="flowlauncher_plugin_everything_sort_by_date_run">Dátum spustenia</system:String>
+    <system:String x:Key="flowlauncher_plugin_everything_sort_by_ascending">↑</system:String>
+    <system:String x:Key="flowlauncher_plugin_everything_sort_by_descending">↓</system:String>
     
     <system:String x:Key="flowlauncher_plugin_everything_installing_title">Inštalácia Everything</system:String>
     <system:String x:Key="flowlauncher_plugin_everything_installing_subtitle">Inštaluje sa služba Everything. Čakajte, prosím…</system:String>
