--- a/EverythingSettings.xaml
+++ b/EverythingSettings.xaml
@@ -4,9 +4,9 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:helper="clr-namespace:Flow.Launcher.Plugin.Everything.Helper"
+             xmlns:vm="clr-namespace:Flow.Launcher.Plugin.Everything.ViewModels"
              mc:Ignorable="d" 
              Loaded="View_Loaded"
-             DataContext="{Binding RelativeSource={RelativeSource Self}}"
              d:DesignHeight="300" d:DesignWidth="426.4">
     <Grid Margin="7,50" VerticalAlignment="Top" >
         <Grid.RowDefinitions>
@@ -51,13 +51,15 @@
         <TextBox  Grid.Row="3" Grid.Column="2" HorizontalAlignment="Right"
                   ToolTip="{DynamicResource flowlauncher_plugin_everything_customized_args_textbox}"
                   Margin="0,0,5,0" Width="80" Height="35" x:Name="CustomizeArgsBox" TextChanged="CustomizeExplorerArgs"></TextBox>
-        <TextBlock Margin="10" Text="{DynamicResource flowlauncher_plugin_everything_sort_by}" Grid.Row="4"/>
+        <TextBlock Margin="10 15 10 10" Text="{DynamicResource flowlauncher_plugin_everything_sort_by}" Grid.Row="4"/>
 
         <ComboBox Grid.Row="4" 
                   Grid.Column="1" 
-                  Width="200" 
-                  SelectedItem="{Binding _settings.SortOption}" 
-                  ItemsSource="{Binding _settings.SortOptions, Mode=OneWay}">
+                  Width="200"
+                  Margin="0 10 0 0"
+                  SelectedItem="{Binding SortOption}" 
+                  ItemsSource="{Binding GetSortOptions, Mode=OneWay}"
+                  SelectionChanged="onSelectionChange">
             <ComboBox.ItemTemplate>
                 <DataTemplate>
                     <Grid>
@@ -66,5 +68,10 @@
                 </DataTemplate>
             </ComboBox.ItemTemplate>
         </ComboBox>
+
+        <TextBlock Name ="tbFastSortWarning"  Grid.Row="4" Grid.Column="2" Margin="10 5 10 0" TextAlignment="Left"
+                   Text="{DynamicResource flowlauncher_plugin_everything_nonfastsort_warning}"
+                   Visibility ="{Binding FastSortWarningVisibility}"
+                   Foreground="Orange" TextWrapping="Wrap" />
     </Grid>
 </UserControl>
