--- a/EverythingSettings.xaml
+++ b/EverythingSettings.xaml
@@ -15,6 +15,7 @@
             <RowDefinition />
             <RowDefinition />
             <RowDefinition />
+            <RowDefinition />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
@@ -40,22 +41,30 @@
             HorizontalAlignment="Left"
             Content="{DynamicResource flowlauncher_plugin_everything_launch_hidden}" />
 
-        <Label
+        <CheckBox
+            x:Name="ShowShellContextMenu"
             Grid.Row="2"
+            Grid.ColumnSpan="3"
+            Margin="10,6,18,6"
+            HorizontalAlignment="Left"
+            Content="{DynamicResource flowlauncher_plugin_everything_show_shell_context_menu}" />
+
+        <Label
+            Grid.Row="3"
             Margin="10,6,6,6"
             HorizontalAlignment="Left"
             VerticalAlignment="Center"
             Content="{DynamicResource flowlauncher_plugin_everything_editor_path}" />
         <Label
             x:Name="EditorPath"
-            Grid.Row="2"
+            Grid.Row="3"
             Grid.Column="1"
             Margin="10"
             HorizontalAlignment="Left"
             VerticalAlignment="Center" />
         <Button
             x:Name="OpenEditorPath"
-            Grid.Row="2"
+            Grid.Row="3"
             Grid.Column="2"
             MinWidth="80"
             Margin="10"
@@ -63,13 +72,13 @@
             Click="EditorPath_Clicked"
             Content="..." />
         <TextBlock
-            Grid.Row="3"
+            Grid.Row="4"
             Margin="10"
             VerticalAlignment="Center"
             Text="{DynamicResource flowlauncher_plugin_everything_sort_by}" />
 
         <ComboBox
-            Grid.Row="3"
+            Grid.Row="4"
             Grid.Column="1"
             Width="200"
             Margin="10"
