--- a/Languages/es.xaml
+++ b/Languages/es.xaml
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0"?>
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:system="clr-namespace:System;assembly=mscorlib">
 
-    <system:String x:Key="flowlauncher_plugin_everything_is_not_running">Advertencia: El servicio de Everything no está en ejecución</system:String>
+    <system:String x:Key="flowlauncher_plugin_everything_is_not_running">Advertencia: El servicio de Everything no se está ejecutando</system:String>
     <system:String x:Key="flowlauncher_plugin_everything_query_error">Error al consultar Everything</system:String>
     <system:String x:Key="flowlauncher_plugin_everything_copied">Copiado</system:String>
     <system:String x:Key="flowlauncher_plugin_everything_canot_start">No se puede iniciar {0}</system:String>
-    <system:String x:Key="flowlauncher_plugin_everything_open_containing_folder">Abrir carpeta padre</system:String>
+    <system:String x:Key="flowlauncher_plugin_everything_open_containing_folder">Abrir carpeta principal</system:String>
     <system:String x:Key="flowlauncher_plugin_everything_open_with_editor">Abrir con {0}</system:String>
     <system:String x:Key="flowlauncher_plugin_everything_editor_path">Ruta del editor</system:String>
     <system:String x:Key="flowlauncher_plugin_everything_copy_path">Copiar ruta</system:String>
@@ -14,9 +14,9 @@
     <system:String x:Key="flowlauncher_plugin_everything_canot_delete">No se puede eliminar {0}</system:String>
 
     <system:String x:Key="flowlauncher_plugin_everything_plugin_name">Everything</system:String>
-    <system:String x:Key="flowlauncher_plugin_everything_plugin_description">Buscar archivos en disco usando Everything</system:String>
+    <system:String x:Key="flowlauncher_plugin_everything_plugin_description">Busca archivos en disco usando Everything</system:String>
 
-    <system:String x:Key="flowlauncher_plugin_everything_use_location_as_working_dir">Usar la ubicación del resultado de búsqueda como lugar de lanzamiento del ejecutable</system:String>
+    <system:String x:Key="flowlauncher_plugin_everything_use_location_as_working_dir">Usar la ubicación de los resultados de búsqueda como directorio de trabajo ejecutable</system:String>
     <system:String x:Key="flowlauncher_plugin_everything_launch_hidden">Iniciar oculto</system:String>
     
     <system:String x:Key="flowlauncher_plugin_everything_sort_by">Ordenar por</system:String>
@@ -40,9 +40,9 @@
     <system:String x:Key="flowlauncher_plugin_everything_installing_title">Instalación de Everything</system:String>
     <system:String x:Key="flowlauncher_plugin_everything_installing_subtitle">Instalando el servicio de Everything. Por favor, espere...</system:String>
     <system:String x:Key="flowlauncher_plugin_everything_installationsuccess_subtitle">Servicio de Everything instalado correctamente</system:String>
-    <system:String x:Key="flowlauncher_plugin_everything_installationfailed_subtitle">Error al instalar el servicio de Everything de forma automática. Por favor, instálelo manualmente desde https://www.voidtools.com/Everything-1.3.4.686.x64-Setup.exe</system:String>
-    <system:String x:Key="flowlauncher_plugin_everything_run_service">Haga clic aquí para iniciarlo</system:String>
-    <system:String x:Key="flowlauncher_plugin_everything_installing_select">No se ha podido encontrar una instalación de Everything, ¿quieres seleccionar manualmente una ubicación?{0}{0}Si haces click en no y Everything se instalará automáticamente</system:String>
+    <system:String x:Key="flowlauncher_plugin_everything_installationfailed_subtitle">Error al instalar el servicio de Everything de forma automática. Por favor, instálelo manualmente desde https://www.voidtools.com</system:String>
+    <system:String x:Key="flowlauncher_plugin_everything_run_service">Hacer clic aquí para iniciarlo</system:String>
+    <system:String x:Key="flowlauncher_plugin_everything_installing_select">No se ha podido encontrar una instalación de Everything, ¿desea seleccionar manualmente una ubicación?{0}{0}Si hace click en no Everything se instalará automáticamente para usted</system:String>
 
     <system:String x:Key="flowlauncher_plugin_everything_show_windows_context_menu">Mostrar menú contextual</system:String>
 </ResourceDictionary>
